# hoi-InsolvencyBot

./: .coveragerc  .env.example  20250213_rerun_llama.py  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GenerateFullReport.ipynb  GenerateSummaryGraphs.ipynb  GenerateSummaryOnQuestionLevel.ipynb  Makefile  README.md  api.py  api_client.py  api_health.py  app.py  benchmark.py  check_status.sh  cli.py  deploy_api.sh  docker-compose.yml  enhanced_load_test.py  evaluate_all_models_more_llms_feb_2025.sh  evaluate_responses_with_mark_scheme.py  generate_diagrams.sh  generate_docs.py  generate_responses_claude.py  generate_responses_deepseek.py  generate_responses_deepseek_via_azure.py  generate_responses_gemini.py  generate_responses_gpt.py  generate_responses_insolvency_bot.py  generate_responses_llama.py  generate_test_report.py  install_dependencies.sh  install_hooks.sh  load_test.py  output_test_DeepSeek-R1.csv  output_test_Mistral-Large-2411.csv  output_test_claude-3-5-sonnet-20241022.csv  (+59 more)
.devcontainer/: devcontainer.json
.github/workflows/: python-ci.yml  python-tests.yml
docs/: advanced_usage.md  api_examples.md  api_reference.md  architecture.md  architecture_diagram.md  user_guide.md
hooks/: pre-commit
load_test_results/: load_test_report_20250510_153851.html  load_test_results_20250510_153851.json
src/hoi_insolvencybot/: __main__.py  config.py  insolvency_bot.py  logging_config.py  monitoring.py  (+1 more)
templates/: improved_index.html  improved_status.html  index.html  status.html
tests/: test_api.py  test_insolvency_bot.py  test_integration.py
(+3 files in other folders)
